# pepper-imitation-pkg

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: .PepperImitationNode.hpp.swp  .PepperTabletNode.hpp.swp  PepperAudioPlayerNode.hpp  PepperImitationNode.hpp  PepperTTSNode.hpp  PepperTabletNode.hpp
launch/: .pepper_imitation_node.launch.swp  pepper_imitation.launch  pepper_imitation_bringup.launch  pepper_imitation_kinect.launch  pepper_imitation_movement.launch  pepper_imitation_node.launch  pepper_imitation_simulation.launch  pepper_imitation_tts_node.launch  pepper_tablet_node.launch
msg/: AudioPlayerCommand.msg  ImitationPose.msg
openni_tracker/src/: .openni_tracker.cpp.swp  openni_tracker.cpp
pepper_imitation/: CMakeLists.txt  package.xml
pepper_imitation/include/: PepperFaceTrackerNode.hpp  PepperImitationNode.hpp  PepperTabletNode.hpp  PepperTeleopJoyNode.hpp
pepper_imitation/launch/: pepper_imitation.launch  pepper_imitation_all.launch  pepper_imitation_audio_player_node.launch  pepper_imitation_bringup.launch  pepper_imitation_face_tracker_node.launch  pepper_imitation_game.launch  pepper_imitation_game_node.launch  pepper_imitation_kinect.launch  pepper_imitation_movement.launch  pepper_imitation_node.launch  pepper_imitation_picture_node.launch  pepper_imitation_tablet_node.launch  pepper_imitation_teleop_joy_node.launch  pepper_imitation_tts_node.launch
pepper_imitation/msg/: ImitationPose.msg  ImitationResult.msg  UserCommand.msg
pepper_imitation/scripts/: pepper_imitation_game_node.py  pepper_imitation_picture_node.py
pepper_imitation/src/: PepperAudioPlayerNode.cpp  PepperFaceTrackerNode.cpp  PepperImitationNode.cpp  PepperTTSNode.cpp  PepperTabletNode.cpp  PepperTeleopJoyNode.cpp  pepper_audio_player_node.cpp  pepper_face_tracker_node.cpp  pepper_imitation_node.cpp  pepper_tablet_node.cpp  pepper_teleop_joy_node.cpp  pepper_tts_node.cpp
pepper_imitation/utilities/: buildPepperSystem.sh  installDependencies.sh  runPepperSystem.sh
pepper_moveit_config/: .setup_assistant  package.xml
pepper_moveit_config/cmake/: pepper_moveit_configConfig.cmake
pepper_moveit_config/config/: JulietteY20MP.srdf
scripts/: .PepperGameStateMachine.py.swp  PepperGameStateMachine.py  pepper_imitation_game_node.py
src/: .PepperImitationNode.cpp.swp  .pepper_imitation_node.cpp.swp  .pepper_tablet_node.cpp.swp  PepperAudioPlayerNode.cpp  PepperGameControllerNode.cpp  PepperImitationNode.cpp  PepperTabletNode.cpp  pepper_imitation_node.cpp  pepper_tablet_node.cpp  pepper_tts_node.cpp
